fix: main section gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -98,6 +98,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
 .menu-button {
